--- a/Proyectoint/Proyectoint.csproj
+++ b/Proyectoint/Proyectoint.csproj
@@ -23,10 +23,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Models\Models.csproj" />
+    <PackageReference Include="Polly" Version="7.2.1" />
   </ItemGroup>
 
 
