--- a/Proyectoint/appsettings.json
+++ b/Proyectoint/appsettings.json
@@ -1,14 +1,15 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     },
-    "ConnenctionStrings": {
-        "Conexion": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-    },
-
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+      "PersonaContext": "Server=ATALIA\\SQLEXPRESS;Database=Proyecto_integrador;Trusted_Connection=True;MultipleActiveResultSets=true"
+    }
+  },
+  "ConnectionStrings": {
+    "PersonaContext": "Server=(localdb)\\mssqllocaldb;Database=PersonaContext-0ac81732-c207-4ab4-9819-12c3c1adfc26;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
