--- a/Proyectoint/appsettings.json
+++ b/Proyectoint/appsettings.json
@@ -4,12 +4,12 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-    },
-    "ConnectionStrings": {
-      "PersonaContext": "Server=ATALIA\\SQLEXPRESS;Database=Proyecto_integrador;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   },
-  "ConnectionStrings": {
-    "PersonaContext": "Server=(localdb)\\mssqllocaldb;Database=PersonaContext-0ac81732-c207-4ab4-9819-12c3c1adfc26;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "ConnectionStrings": {
+        "PersonaContext": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+        "UsuariosContext": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+        "CandidatoContext": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+        "EmpresaContext": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    }
 }
