--- a/Proyectoint/appsettings.json
+++ b/Proyectoint/appsettings.json
@@ -10,6 +10,7 @@
         "PersonaContext": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
         "UsuariosContext": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
         "CandidatoContext": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-        "EmpresaContext": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+        "EmpresaContext": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+        "Historial1Context": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
     }
 }
