--- a/Proyectoint/appsettings.json
+++ b/Proyectoint/appsettings.json
@@ -11,6 +11,7 @@
         "UsuariosContext": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
         "CandidatoContext": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
         "EmpresaContext": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-        "LaboralContext": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+        "LaboralContext": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+        "CandiContext": "Data Source=ATALIA;Initial Catalog=Proyecto_integrador;User ID=Jonatan3D;Password=Solovino000;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
     }
 }
